--- a/css/main.css
+++ b/css/main.css
@@ -216,7 +216,7 @@ img {
 .header-end__logo {
     position: absolute;
     bottom: -87%;
-    left: -1%;
+    left: 0%;
 }
 .header-end__logo:hover {
     opacity: 0.6;
@@ -225,18 +225,22 @@ img {
     opacity: 0.3;
 }
 .header-end__nav-list {
-    width: 700px;
-    margin-right: 163px;
+    width: 780px;
+    margin-right: 90px;
     padding-left: 0;
     list-style: none;
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
 }
 .nav-list__items {
+    margin-right: 55px;
     font-size: 16px;
     line-height: 21px;
     text-decoration: none;
     color: #333333;
+}
+.nav-list__items:nth-child(6) {
+    margin: 0;
 }
 .nav-list__items:hover {
     border-bottom: 4px solid #f4ffad;
@@ -248,7 +252,7 @@ img {
     display: block;
     width: 20px;
     height: 20px;
-    margin-right: -25px;
+    margin-right: 15px;
     background-image: url("../images/active.svg");
     background-repeat: no-repeat;
     content: "";
@@ -262,6 +266,8 @@ img {
     text-decoration: none;
     color: #333333;
     border-bottom: 4px solid transparent;
+    border: 0;
+    background-color: transparent;
 }
 .header-end__last-link:hover {
     border-bottom: 4px solid #f4ffad;
@@ -408,43 +414,63 @@ img {
     text-align: center;
     color: #333333;
 }
-.s3__list {
+.s3__before-and-after {
     position: relative;
-    display: flex;
-    margin: 0 auto;
-    padding-left: 0;
-    list-style: none;
 }
-.s3__list::before {
+.s3__before-and-after::before {
     position: absolute;
     top: 38%;
     left: -5%;
     display: block;
-    width: 37px;
-    height: 47px;
+    width: 14px;
+    height: 26px;
     background-image: url("../images/right-left.svg");
     background-repeat: no-repeat;
-    background-size: contain;
     transform: rotateZ(180deg);
     content: "";
 }
-.s3__list::after {
+.s3__before-and-after:hover::before {
+    box-shadow: 1px -1px 2px 15px #fff;
+    background-color: #fff;
+}
+.s3__before-and-after:active::before {
+    box-shadow: 1px -1px 2px 15px #f9f9f9;
+    background-color: #f9f9f9;
+}
+.s3__before-and-after::after {
     position: absolute;
     top: 38%;
     right: -5%;
     display: block;
-    width: 37px;
-    height: 47px;
+    width: 14px;
+    height: 26px;
     background-image: url("../images/right-left.svg");
     background-repeat: no-repeat;
-    background-size: contain;
     content: "";
 }
+.s3__before-and-after:hover::after {
+    box-shadow: 1px -1px 2px 15px #fff;
+    background-color: #fff;
+}
+.s3__before-and-after:active::after {
+    box-shadow: 1px -1px 2px 15px #f9f9f9;
+    background-color: #f9f9f9;
+}
+.s3__list {
+    display: flex;
+    margin: 0 auto;
+    padding-left: 0;
+    list-style: none;
+    width: 1338px;
+    overflow-x: hidden;
+}
 .s3__items {
+    width: 193px;
     margin-right: 13px;
     margin-bottom: 14px;
     padding: 30px 32px 42px 35px;
     background-color: #fff;
+    flex-shrink: 0;
 }
 .s3__items::before {
     display: block;
@@ -455,8 +481,11 @@ img {
     background-repeat: no-repeat;
     content: "";
 }
-.s3__items-title-link:hover > .s3__items {
-    opacity: 0.1;
+.s3__items:hover {
+    opacity: 0.7;
+}
+.s3__items:active {
+    opacity: 0.5;
 }
 .s3__items:first-child {
     margin-bottom: 0;
@@ -505,13 +534,13 @@ img {
 .s3__items-title-link:active {
     opacity: 0.3;
 }
-.s3_last-box {
+.s3__last-box {
     display: flex;
     
     padding: 41px 105px 41px 41px;
     background-color: #fff;
 }
-.s3_last-box-right {
+.s3__last-box-right {
     width: 492px;
     margin-left: 60px;
 }
@@ -624,6 +653,7 @@ img {
     background-color: #FFFFFF;
     border: 2px solid transparent;
     border-radius: 5px;
+    outline: #FFBD54;
 }
 .s4__input:focus {
     background-color: #FFFFFF;
@@ -681,11 +711,17 @@ img {
     width: 305px;
     background-color: #fff;
 }
+.s5__items:hover {
+    box-shadow: 3px 3px 10px gray;
+}
 .s5__items-middle {
     width: 640px;
     display: flex;
     align-items: center;
     background-color: #fff;
+}
+.s5__items-middle:hover {
+    box-shadow: 3px 3px 10px gray;
 }
 .s5__items-box {
     width: 242px;
@@ -766,7 +802,7 @@ img {
 .s6__map {
     position: absolute;
     top: 0%;
-    left: -2%;
+    left: -15%;
 }
 .s6__big-input-box {
     position: absolute;
@@ -793,7 +829,10 @@ img {
     padding: 16px 0 13px 22px;
     background-color: #fff;
     border: 0;
+    border: 2px solid transparent;
     color: #949494;
+    outline: #FFBD54;
+    resize: none;
 }
 .s6__input:focus {
     background-color: #FFFFFF;
@@ -932,4 +971,298 @@ p {
     line-height: 18px;
     color: #5C5C5C;
     text-align: end;
+}
+.services-s1 {
+    display: flex;
+    align-items: center;
+}
+.services-s1__title-and-text {
+    width: 445px;
+    margin-left: 110px;
+}
+.services-s1__title {
+    margin: 0 0 21px 0;
+    font-weight: 700;
+    font-size: 70px;
+    line-height: 64px;
+    color: #333333;
+}
+.services-s1__text {
+    margin: 0;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;  
+    color: #949494;
+}
+.services-s1__img {
+    margin-left: auto;
+    margin-right: -65px;
+}
+.services-s2 {
+    padding-bottom: 168px;
+}
+.services-s2-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-left: 0;
+    list-style: none;
+}
+.services-s2__items {
+    position: relative;
+    width: 230px;
+    margin: 0 0 34px 0;
+    padding: 0 22px 45px 53px;
+    background-color: #fff;
+}
+.services-s2__items:hover {
+    box-shadow: 0px 5px 10px 5px grey;
+}
+.services-s2__items::before {
+    display: block;
+    width: 144px;
+    height: 154px;
+    margin: 0 0 22px auto;
+    background-image: url("../images/pet-panja.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    content: "";
+}
+.services-s2__items-box {
+    width: 200px;
+}
+.services-s2__items-box::before {
+    position: absolute;
+    top: 12%;
+    left: 18%;
+    display: block;
+    width: 70px;
+    height: 100px;
+    background-image: url(../images/pervichniy-pros.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    content: "";
+}
+.services-s2__items:nth-child(2) .services-s2__items-box::before {
+    background-image: url(../images/pervichniy-osmot.svg);
+}
+.services-s2__items:nth-child(3) .services-s2__items-box::before {
+    background-image: url(../images/xirurgie.svg);
+}
+.services-s2__items:nth-child(4) .services-s2__items-box::before {
+    background-image: url(../images/dermatology.svg);
+}
+.services-s2__items:nth-child(5) .services-s2__items-box::before {
+    background-image: url(../images/lobarotory.svg);
+}
+.services-s2__items:nth-child(6) .services-s2__items-box::before {
+    background-image: url(../images/oftalmology.svg);
+}
+.services-s2__items:nth-child(7) .services-s2__items-box::before {
+    background-image: url(../images/uzi.svg);
+}
+.services-s2__items:nth-child(8) .services-s2__items-box::before {
+    background-image: url(../images/chiprovanie.svg);
+}
+.services-s2__items:nth-child(9) .services-s2__items-box::before {
+    background-image: url(../images/pasport.svg);
+}
+.services-s2__items:nth-child(10) .services-s2__items-box::before {
+    background-image: url(../images/vaksinatsiya.svg);
+}
+.services-s2__items:nth-child(11) .services-s2__items-box::before {
+    background-image: url(../images/stomatologiya.svg);
+}
+.services-s2__items:nth-child(12) .services-s2__items-box::before {
+    background-image: url(../images/call-to-home.svg);
+}
+
+.services-s2__items:nth-child(9) {
+    margin: 0;
+}
+.services-s2__items:nth-child(10) {
+    margin: 0;
+}
+.services-s2__items:nth-child(11) {
+    margin: 0;
+}
+.services-s2__items:nth-child(12) {
+    margin: 0;
+}
+.services-s2__titles {
+    margin: 0 0 14px 0;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 34px;
+    color: #333333;
+}
+.services-s2__texts {
+    margin: 0 0 45px 0;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #949494;
+}
+.services-s2__link1 {
+    padding: 15px 30px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 21px;
+    text-decoration: none;
+    text-align: center;
+    color: #FFFFFF;
+    background-color: #000000;
+    border-radius: 3px;   
+}
+.services-s2__link1:hover {
+    background-color: #FFBD54;
+    border-radius: 3px;
+    color: #333333;
+}
+.services-s2__link1:active {
+    opacity: 0.6;
+}
+.services-s2__link2 {
+    padding: 15px 30px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 21px;
+    text-decoration: none;
+    text-align: center;
+    color: #FFFFFF;
+    border-radius: 3px;
+    background-color: #78C0DE;
+}
+.services-s2__link3 {
+    padding: 15px 30px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 21px;
+    text-decoration: none;
+    text-align: center;
+    color: #FFFFFF;
+    border-radius: 3px;
+    background-color: #FFBD54;
+}
+.modal {
+    display: none;
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+    opacity: 0.9;
+}
+.modal-show {
+    display: block;
+}
+.modal-box {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 850px;
+    margin: 80px auto 0 auto;
+    background-image: url("../images/modal-bg.jpg");
+}
+.modal-close-button {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    margin: 22px 0 0 22px;
+}
+.modal-left-box {
+    margin: 150px 0 0 72px;
+}
+.modal-left-box::after {
+    display: block;
+    width: 350px;
+    height: 324px;
+    margin-left: -40px;
+    background-image: url("../images/modal-dog.png");
+    background-repeat: no-repeat;
+    content: "";
+}
+.modal-left-word {
+    margin-bottom: 21px;
+    font-size: 20px;
+    line-height: 30px;
+    color: #333333;
+}
+.modal-google-button {
+    display: flex;
+    align-items: center;
+    width: 180px;
+    margin-bottom: 22px;
+    padding: 15px 35px;
+    font-size: 16px;
+    line-height: 21px;
+    text-decoration: none;
+    color: #333333;
+    background-color: #fff;
+}
+.modal-google-button::before {
+    display: block;
+    width: 20px;
+    height: 20px;
+    margin-right: 14px;
+    background-image: url("../images/google.svg");
+    background-repeat: no-repeat;
+    content: "";
+}
+.modal-facebook-button {
+    display: flex;
+    align-items: center;
+    width: 192px;
+    padding: 15px 35px 15px 22px;
+    font-size: 16px;
+    line-height: 21px;
+    text-decoration: none;
+    color: #333333;
+    background-color: #fff;
+}
+.modal-facebook-button::before {
+    display: block;
+    width: 20px;
+    height: 20px;
+    margin-right: 14px;
+    background-image: url("../images/facebook.svg");
+    background-repeat: no-repeat;
+    content: "";
+}
+.modal-right-box {
+    width: 410px;
+}
+.modal-title {
+    font-weight: 700;
+    font-size: 50px;
+    line-height: 54px;
+    color: #333333;
+}
+.modal-input {
+    width: 335px;
+    margin-bottom: 21px;
+    padding: 16px 0 13px 22px;
+    resize: none;
+    border: 0;
+    border: 4px solid transparent;
+    outline: #FFBD54;
+}
+.modal-input:focus {
+    border: 4px solid #FFBD54;
+}
+.modal-input:not(:placeholder-shown,:focus):invalid {
+    background-color: #FFFFFF;
+    border: 4px solid #DC4D41;
+    border-radius: 5px;
+    color: #DC4D41;
+}
+.modal-form-button {
+    padding: 15px 67px;
+    font-size: 16px;
+    line-height: 21px;
+    color: #FFFFFF;
+    background-color: #000000;
 }
