--- a/css/main.css
+++ b/css/main.css
@@ -1146,10 +1146,10 @@ p {
 }
 .modal {
     display: none;
-    position: fixed;
+    /* position: fixed;
     top: 0%;
     left: 0%;
-    z-index: 10;
+    z-index: 10; */
     width: 100%;
     height: 100%;
     background-color: rgb(255, 255, 255);
