--- a/css/main.css
+++ b/css/main.css
@@ -1146,10 +1146,10 @@ p {
 }
 .modal {
     display: none;
-    /* position: fixed;
+    position: fixed;
     top: 0%;
     left: 0%;
-    z-index: 10; */
+    z-index: 10;
     width: 100%;
     height: 100%;
     background-color: rgb(255, 255, 255);
@@ -1164,7 +1164,7 @@ p {
     align-items: center;
     justify-content: space-between;
     width: 850px;
-    margin: 80px auto 0 auto;
+    margin: 20px auto 0 auto;
     background-image: url("../images/modal-bg.jpg");
 }
 .modal-close-button {
