--- a/css/main.css
+++ b/css/main.css
@@ -1012,6 +1012,12 @@ p {
     background-color: transparent;
     border: 0;
 }
+.modal-close-button:hover {
+    cursor: pointer;
+}
+.modal-close-button:active {
+    background-color: red;
+}
 .modal-left-box {
     margin: 150px 0 0 72px;
 }
